# test-reversi

./: CMakeLists.txt  README.md
doc/: systemArchitecture.plantuml
src/: CMakeLists.txt  algo.cpp  algo.h  base.h  drawboard.cpp  drawboard.h  main.cpp  main.h  movestep.cpp  movestep.h  player.cpp  player.h  step.cpp  step.h
src/move/: east.cpp  east.h  eastnorth.cpp  eastnorth.h  north.cpp  north.h  northwest.cpp  northwest.h  south.cpp  south.h  southeast.cpp  southeast.h  west.cpp  west.h  westsouth.cpp  westsouth.h
